<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#FBE9E7">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="My Nanodegree Apps!"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#BF360C" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_one"
            android:onClick="buttonOneOnClick"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ff5722" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_two"
            android:onClick="buttonTwoOnClick"
            android:id="@+id/button"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ff5722" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_three"
            android:onClick="buttonThreeOnClick"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ff5722" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_four"
            android:onClick="buttonFourOnClick"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#ff5722" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_five"
            android:onClick="buttonFiveOnClick"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#ff5722" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_six"
            android:onClick="buttonSixOnClick"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#00695C" />

    </TableLayout>

</RelativeLayout>